pulkitchhabra-salesforce/objects/Asset_WME__c.object
<CustomObject>
    <customHelp>WealthHelp</customHelp>
    <description>Custom object used to manage WM Asset information.  This object has a lookup relationship with Financial Accounts and Holdings.</description>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <description>Class of asset.  Master picklist for Asset Type.</description>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Balanced Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Traded Funds (ETF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Fund_Name__c</fullName>
        <description>Name of the Asset/Fund.</description>
        <externalId>true</externalId>
        <label>Asset (Fund Name)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Asset Types for Holdings and Financial Accounts.  Dependent on Asset Class.</description>
        <label>Asset Type</label>
        <picklist>
            <controllingField>Asset_Class__c</controllingField>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Stock - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Stock - More Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Stock - Sector-Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflation-Indexed Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International/Global Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life-Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Intermediate-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Long-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Short-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Intermediate-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Long-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Short-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CUSIP__c</fullName>
        <description>Committee on Uniform Security Identifier</description>
        <label>CUSIP</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed description about the stock, bond, or fund.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Price__c</fullName>
        <description>Last price of the Asset</description>
        <label>Last Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <label>Security #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>WM Asset</label>
    <listViews>
        <fullName>WMAssetsAll</fullName>
        <columns>NAME</columns>
        <columns>Asset_Fund_Name__c</columns>
        <columns>Asset_Class__c</columns>
        <columns>Asset_Type__c</columns>
        <columns>Last_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>WM Assets - All</label>
    </listViews>
    <listViews>
        <fullName>WMAssetsMutualFundsETF</fullName>
        <columns>NAME</columns>
        <columns>Asset_Fund_Name__c</columns>
        <columns>Asset_Class__c</columns>
        <columns>Asset_Type__c</columns>
        <columns>Last_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Class__c</field>
            <operation>equals</operation>
            <value>Exchange Traded Funds (ETF)</value>
        </filters>
        <label>WM Assets - Mutual Funds / ETF</label>
    </listViews>
    <listViews>
        <fullName>WMAssetsStocksandStockFunds</fullName>
        <columns>NAME</columns>
        <columns>Asset_Fund_Name__c</columns>
        <columns>Asset_Class__c</columns>
        <columns>Asset_Type__c</columns>
        <columns>Last_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Class__c</field>
            <operation>equals</operation>
            <value>Stocks,Stock Funds</value>
        </filters>
        <label>WM Assets - Stocks and Stock Funds</label>
    </listViews>
    <nameField>
        <label>Symbol</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WM Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>